2005-12-24  Alexey Shchepin  <alexey@sevcom.net>

	* src/ejabberd_logger_h.erl: Speed optimizations

2005-12-22  Alexey Shchepin  <alexey@sevcom.net>

	* src/Makefile.in: Clean results of ASN.1 compiler (thanks to
	Sergei Golovan)

	* src/win32/ejabberd.nsh: Removed (thanks to Sergei Golovan)

2005-12-22  Mickael Remond  <mickael.remond@process-one.net>

	* src/odbc/ejabberd_odbc.erl: Added error message on ODBC
	connection to help ODBC configuration troubleshooting.

2005-12-22  Alexey Shchepin  <alexey@sevcom.net>

	* src/Makefile.win32: Updated (thanks to Sergei Golovan)
	* src/configure.erl: Likewise
	* src/win32/CheckReqs.ini: Likewise
	* src/win32/CheckReqs1.ini: Likewise
	* src/win32/CheckReqs1H.ini: Likewise
	* src/win32/ejabberd.nsh: Likewise
	* src/win32/ejabberd.nsi: Likewise

	* src/odbc/ejabberd_odbc.erl: Bugfix

2005-12-21  Mickael Remond  <mickael.remond@process-one.net>

	* src/odbc/mysql.sql: Database description for MySQL Database 4.1
	(Max version, with Innodb)
	* src/ejabberd_auth_odbc.erl: MySQL ODBC support
	* src/mod_offline_odbc.erl: Likewise
	* src/mod_vcard_odbc.erl: Likewsie
	* src/mod_roster_odbc.erl: Likewise
	* src/odbc/ejabberd_odbc.erl: Likewise
	* src/mod_last_odbc.erl: Likewise

2005-12-16  Mickael Remond  <mickael.remond@process-one.net>

	* doc/Makefile: Added helper to generate the docs (Thanks to Sander
	Devrieze)
	* doc/guide.tex: Added ejabberd 1.0.0 release notes.
	* doc/dev.tex: Code clean-up (Thanks to Sander Devrieze) 

2005-12-16  Alexey Shchepin  <alexey@sevcom.net>

	* doc/features.tex: Added feature sheet (Thanks to Sander
	Devrieze)

2005-12-14  Alexey Shchepin  <alexey@sevcom.net>

	* src/mod_irc/iconv_erl.c: Bugfix (thanks to Tomas Janousek)

2005-12-13  Alexey Shchepin  <alexey@sevcom.net>

	* src/win32/ejabberd.nsi: Updated (thanks to Maxim Ryazanov)

	* src/ejabberd.hrl: Updated version
	* src/ejabberd.app: Likewise
	* doc/version.tex: Likewise

2005-12-13  Mickael Remond  <mickael.remond@process-one.net>
