@@ -1,3 +1,7 @@
+2006-01-02  Mickael Remond  <mickael.remond@process-one.net>
+
+	* src/odbc/ejabberd_odbc.erl: Native MySQL support
+
 2005-12-24  Alexey Shchepin  <alexey@sevcom.net>
 
 	* src/ejabberd_logger_h.erl: Speed optimizations
